feat(basic service placeholders): Created a placeholder services to be able to recreate all the processing steps of the audiocall.
fix(logging instead of print): in most places started to use logger instead of simply print

feat(worker service): Added a new service to docker compose - worker, core service to process new audiofiles

feat(redis, mongo, minio configs): Created separate files for all the DB releted integrations and made them in one codestyle with simmilar interfaces.

fix(env): Changed env to allow to connect to mongodb using service name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 # docker-compose.yml
-version: '3.8'
 
 services:
   mongodb:
@@ -48,6 +47,18 @@ services:
       - mongodb
       - minio
       - redis
+
+  worker:
+    build:
+      context: ./backend
+    container_name: call-analyzer-worker
+    command: [ "uv", "run", "python", "-u", "-m", "services.worker" ]
+    volumes:
+      - ./backend:/app
+    env_file:
+      - .env
+    depends_on:
+      - backend
 
   frontend:
     build:
