--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@
 # MongoDB Credentials
 MONGO_USER=admin
 MONGO_PASS=password
-MONGO_HOST=localhost
-MONGO_PORT=27017
+MONGO_LOCAL_HOST=localhost
+MONGO_LOCAL_PORT=27021
+MONGO_DOCKER_HOST=mongodb
 MONGO_DB_NAME=call_analyzer
 
 # Minio Credentials
